--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,47 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-body{
-    padding: 15px;
-}
-header{
-    nav{
-        ul{
-            li{
+
+header {
+    padding-inline: 15px;
+    height: 10vh;
+    background-color: darkblue;
+    display: flex;
+    flex-direction: row;
+    /* align-content: space-around; */
+    align-items: center;
+    justify-content: space-between;
+
+    div {
+        width: 50px;
+        display: inline;
+
+        p {
+            font-size: 3em;
+            color: white;
+        }
+    }
+
+    nav {
+        width: 600px;
+        display: inline;
+
+        ul {
+            display: flex;
+            justify-content: space-around;
+
+            li {
                 list-style: none;
                 display: inline-block;
-                a{
+
+                a {
                     text-decoration: none;
-                    color: black;
-                    &:hover{
+                    color: white;
+                    font-size: 1.5em;
+
+                    &:hover {
                         text-decoration: underline;
                     }
                 }
@@ -23,62 +49,239 @@ header{
         }
     }
 }
-main{
-    button{
+
+main {
+    color: azure;
+
+    button {
         position: fixed;
         right: 10px;
         bottom: 20px;
-        width: 30px;
-        height: 30px;
+        width: 40px;
+        height: 40px;
         font-size: 2em;
         border-radius: 50%;
-        a{
+        background-color: black;
+        box-shadow: 3px 2px grey;
+
+        &:hover {
+            box-shadow: 0 0;
+        }
+
+        a {
             text-decoration: none;
+            color: white;
         }
     }
-    #inicio{
+
+    #inicio {
         background-image: url(./images/profile.jpg);
+        background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        width: 100vh;
-        height: 100vh;
-        h1{
-            font-size: 3em;
-        }
-        p{
-            font-size: 1.5em;
-        }
-    }
-    #sobre-mi{
-        width: 100vh;
-        height: 50vh;
-    }
-    #portafolio{
+        /* width: 100vh; */
+        height: 90vh;
+        padding: 15px;
+        text-shadow: 2px 2px black;
+        color: white;
         display: flex;
-        flex-direction: row;
-        justify-content: center;
-        flex-wrap: wrap;
-        .cotenedor-portafolio{
+
+        .caja-izquierda {
+            width: 50%;
             text-align: center;
-            width: 250px;
-            height: 280px;
-            border: 1px solid lightgray;
-            margin: 15px;
-            &:hover{
-                border: 1px solid rgb(231, 231, 231);
+            padding: 5px;
+
+            h1 {
+                font-size: 3em;
+                padding-bottom: 15px;
             }
-            img{
-                width: 150px;
-                height: 180px;
-                margin: 5px;
-                &:hover{
-                    opacity: 0.8;
+
+            p {
+                font-size: 1.5em;
+                /* width: 40%; */
+
+                a {
+                    color: white;
+
+                    &:hover {
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+
+        .caja-derecha {
+            width: 50%;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            flex-direction: column;
+
+            img {
+                border-radius: 50%;
+                width: 300px;
+                height: 300px;
+                border: 1px solid white;
+                display: inline-block;
+                margin-bottom: 50px;
+            }
+
+            .btn-cv {
+                background-color: darkblue;
+                border: 1px solid white;
+                padding-block: 20px;
+                padding-inline: 100px;
+                color: white;
+                text-decoration: none;
+                /* display: block; */
+                border-radius: 10px;
+                text-align: center;
+                align-content: center;
+
+                &:hover {
+                    text-decoration: underline;
+                    text-shadow: 0 0;
+                    box-shadow: 2px 2px black;
+                    background-color: rgb(4, 4, 180);
+                }
+
+                &:active {
+                    transform: scale(0.9);
                 }
             }
         }
     }
-    #contacto{
-        width: 100vh;
+
+    #sobre-mi {
+        /* width: 100vh; */
+        background-image: url(./images/profile2.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         height: 100vh;
+        padding: 15px;
+
+        ul {
+            text-align: center;
+            text-shadow: 2px 2px black;
+            font-size: 1.5em;
+
+            summary {
+                cursor: pointer;
+            }
+        }
+    }
+
+    #portafolio {
+        background-image: url(./images/profile3.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        height: 90%;
+
+        .cotenedor-portafolio {
+            text-align: center;
+            width: 250px;
+            height: 280px;
+            border: 0.5px solid lightgray;
+            margin: 15px;
+            opacity: 0.8;
+            text-shadow: 2px 2px black;
+            color: white;
+
+            &:hover {
+                /* box-shadow: 2px 2px gray; */
+                border: 1px solid white;
+                transition: 0.5s;
+                opacity: 1;
+            }
+
+            img {
+                width: 150px;
+                height: 180px;
+                margin: 5px;
+
+                /* opacity: 0.8; */
+                &:hover {
+                    /* opacity: 1; */
+                    transition: 0.5s;
+                }
+            }
+
+            a {
+                color: white;
+                text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                    text-shadow: 0 0;
+                }
+            }
+        }
+    }
+
+    #contacto {
+        /* width: 100vh; */
+        height: 90vh;
+        background-image: url(./images/profile4.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+
+        .caja-uno {
+            width: 50%;
+        }
+
+        .caja-dos {
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+
+            .contenedor-social {
+                text-align: center;
+                width: 150px;
+                height: 150px;
+                border: 0.5px solid lightgray;
+                margin-inline: 45px;
+                opacity: 0.8;
+                text-shadow: 2px 2px black;
+                color: white;
+
+                &:hover {
+                    /* box-shadow: 2px 2px gray; */
+                    border: 1px solid white;
+                    transition: 0.5s;
+                    opacity: 1;
+                }
+            }
+        }
+    }
+}
+
+footer {
+    background-color: darkblue;
+    text-align: center;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 10vh;
+
+    a {
+        text-decoration: none;
+        color: white;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
