--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 header {
@@ -52,7 +53,6 @@ header {
 
 main {
     color: azure;
-    /* scroll-behavior: smooth; */
 
     button {
         position: fixed;
@@ -183,15 +183,13 @@ main {
             text-align: center;
             text-shadow: 2px 2px black;
             font-size: 1.5em;
+            list-style: none;
 
             summary {
                 cursor: pointer;
             }
             .about{
                 font-size: 1em;
-                li{
-                    list-style: disc;
-                }
             }
         }
     }
