--- a/styles.css
+++ b/styles.css
@@ -208,14 +208,14 @@
         flex-direction: row;
         justify-content: center;
         flex-wrap: wrap;
-        height: 100vh;
+        height: 100dvh;
 
         .cotenedor-portafolio {
             text-align: center;
             width: 140px;
             height: 160px;
             border: 0.5px solid lightgray;
-            margin: 15px;
+            margin: 12px;
             /* opacity: 0.8; */
             text-shadow: 2px 2px black;
             color: white;
@@ -244,7 +244,7 @@
 
     #contacto {
         /* width: 100vh; */
-        height: 92vh;
+        height: 92dvh;
         background-image: url(./images/profile4.webp);
         background-position: center;
         background-repeat: no-repeat;
@@ -583,7 +583,7 @@
         width: 180px;
         height: 210px;
         border: 1px solid lightgray;
-        margin: 10px;
+        margin: 5px;
         /* opacity: 0.8; */
         text-shadow: 1px 1px black;
         color: white;
