--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@
             display: flex;
             flex-direction: column-reverse;
             justify-content: start;
+            text-overflow: ellipsis;
 
             .caja-izquierda {
                 /* width: 50%; */
@@ -121,6 +122,7 @@
                     opacity: 0;
                     animation: aparecer 2s 5s linear forwards;
                     margin-top: 10px;
+                    text-overflow: ellipsis;
                 }
 
                 a {
@@ -183,6 +185,7 @@
         height: 100vh;
         padding: 25px;
         align-content: center;
+        overflow: hidden;
 
         ul {
             text-align: center;
@@ -360,6 +363,7 @@
         align-items: center;
         justify-content: center;
         height: 8vh;
+        overflow: hidden;
 
         a {
             text-decoration: none;
