--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@
             display: flex;
             flex-direction: column-reverse;
             justify-content: start;
-            text-overflow: ellipsis;
+            overflow: hidden;
 
             .caja-izquierda {
                 /* width: 50%; */
@@ -264,7 +264,7 @@
         overflow: hidden;
 
         .caja-uno {
-            height: 60vh;
+            height: 50vh;
             text-align: center;
             /* align-content: center; */
             color: white;
@@ -328,6 +328,7 @@
                 /* opacity: 0.8; */
                 text-shadow: 2px 2px black;
                 color: white;
+                overflow-y: hidden;
 
                 .image-back {
                     width: 50px;
