--- a/styles.css
+++ b/styles.css
@@ -272,7 +272,7 @@
 
             .formulario {
                 font-size: 1.5em;
-                margin: 5px;
+                margin: 3px;
 
                 textarea {
                     resize: none;
@@ -283,7 +283,8 @@
                     color: white;
                     width: 80px;
                     height: 40px;
-                    margin: 5px;
+                    margin-inline: 25px;
+                    margin-block: 2px;
                     border-radius: 10px;
                     cursor: pointer;
 
@@ -298,7 +299,8 @@
                     color: white;
                     width: 80px;
                     height: 40px;
-                    margin: 5px;
+                    margin-inline: 25px;
+                    margin-block: 2px;
                     border-radius: 10px;
                     cursor: pointer;
 
@@ -329,7 +331,7 @@
                 /* opacity: 0.8; */
                 text-shadow: 2px 2px black;
                 color: white;
-                overflow-y: hidden;
+                overflow: hidden;
 
                 .image-back {
                     width: 50px;
@@ -364,7 +366,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 8vh;
+        height: 8dvh;
         overflow: hidden;
 
         a {
