--- a/styles.css
+++ b/styles.css
@@ -467,7 +467,7 @@
         button {
             position: fixed;
             right: 10px;
-            bottom: 20px;
+            bottom: 30px;
             width: 40px;
             height: 40px;
             font-size: 2em;
@@ -492,7 +492,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         /* width: 100vh; */
-        height: 90vh;
+        height: 90svh;
         padding: 10px;
         text-shadow: 1px 1px black;
         color: white;
@@ -685,7 +685,7 @@
                 color: white;
                 width: 80px;
                 height: 40px;
-                margin: 10px;
+                margin: 8px;
                 border-radius: 10px;
                 cursor: pointer;
 
@@ -700,7 +700,7 @@
                 color: white;
                 width: 80px;
                 height: 40px;
-                margin: 10px;
+                margin: 8px;
                 border-radius: 10px;
                 cursor: pointer;
 
